--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% block head %}
 <link rel="stylesheet" type="text/css" href="{{url_for('static',filename='stylesheets/main.css') }}" />
-<title>Task Master</title>
+<title>Lyrics Generator</title>
 {% endblock %} {% block body %}
 <div class="content">
   <h1 style="text-align: center">Lyrics Generator</h1>
